[package]
name = "blocked"
version = "0.0.0"
authors = ["Zac Pullar-Strecker <zacmps@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
reqwest = {version = "0.10.5", features=["blocking", "json"]}
serde = {version = "*", features = ["derive"]}
url = "2.1.1"
regex = "1.3.9"
lazy_static = "1.4.0"
git2 = "0.13"
